import "KeyValue.proto";


option java_outer_classname="DeleteQueryCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;

message DeleteQueryCommand {
    optional string query = 1;
    repeated KeyValue values = 2;
    optional bool isRemove = 3;
	optional int64 requestId = 4;
}